<resources>
    <string name="app_name">Parking App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="start_title">SMART PARKING APPLICATION</string>
    <string name="start_sub_title">A Project of DMP and LOCC</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="powered_by">Powered By: </string>

    <string name="signup_title">SIGNUP NOW</string>
    <string name="signin_title">SIGNIN NOW</string>
    <string name="btn_signin">Sign In</string>
    <string name="btn_retrieve_password">Retrieve Password</string>

    <!-- hints -->
    <string name="hint_pass">Enter Password</string>
    <string name="hint_phoneno">Mobile Number</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_password">Confrim Password</string>

    <string name="full_name">Full Name</string>
    <string name="reg_num">Vehicle Registration Number</string>

    <string name="profile_title">User Profile</string>
    <string name="title_activity_map">Map</string>


    <!-- Google Map API -->
    <string name="google_maps_key">AIzaSyCz4Cxoo9NosSItQ4x14Vz4K_PPe85RqN8</string>

    <!-- otp button -->
    <string name="btn_retrive_otp">Retrive OTP</string>

    <!-- Error Message -->
    <string name="err_msg_mobile">Enter valid mobile number!</string>
    <string name="err_msg_password">Enter valid password!</string>
    <string name="err_msg_fullname">Enter Full Name!</string>
    <string name="err_msg_vehicle">Enter vehicle no!</string>
    <string name="err_old_password">Enter valid old password!</string>
    <string name="find_nearest">Find Nearest</string>
    <string name="refresh">Refresh</string>


    <!--Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_title">
        <item>Home</item>
        <item>Photo</item>
        <item>Movies</item>
        <item>Notifications</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>


    <!-- OTP text information -->
    <string name="msg_sit_back">Sit back &amp; Relax! while we verify your mobile number</string>
    <string name="msg_manual_otp">(Enter the OTP below in case if we fail to detect the SMS automatically)</string>
    <string name="lbl_enter_otp">Enter OTP</string>
    <string name="lbl_submit">SUBMIT</string>
    <string name="lbl_change_phone_number">Change Phone Number</string>


    <!-- All Title -->
    <string name="title_change_password">Change Password</string>
    <string name="title_qr_code">QR Code</string>
    <string name="title_profile">User Profile</string>
    <string name="title_forget_password">Forget Password</string>



    <string name="err_new_password">Enter valid new password!</string>
    <string name="err_confirm_password">Enter valid confirm password!</string>

</resources>
