<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StartActivity"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_30">


        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/start_paring_image"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_title"
            android:textSize="@dimen/title_20"
            android:textColor="@color/BlackColor"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/margin_30"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_layout_mobile_number">

            <EditText
                android:id="@+id/input_mobile_number"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:singleLine="true"
                android:maxLength="11"
                android:hint="@string/hint_phoneno"
                android:layout_marginBottom="@dimen/margin_10"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_layout_password">

            <EditText
                android:id="@+id/input_password"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_pass"/>
        </android.support.design.widget.TextInputLayout>

        <Button android:id="@+id/signin_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_signin"
            android:background="@color/LogoRed"
            android:layout_marginTop="@dimen/margin_30"
            android:textColor="@color/whiteColor"/>


    </LinearLayout>
</LinearLayout>