<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StartActivity"
    android:id="@+id/start_activity"
    android:background="@android:color/white"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/drower_logo"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorPrimaryDark"
        android:layout_gravity="center_horizontal" />


        />
    <TextView
        android:id="@+id/start_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_title"
        android:textSize="@dimen/title_20"
        android:textStyle="bold"
        android:textColor="@color/BlackColor"
        android:textAlignment="center"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30"
        android:src="@drawable/dmp_logo"
        />
    <TextView
        android:id="@+id/start_sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_sub_title"
        android:textSize="@dimen/title_18"
        android:textAlignment="center"
        />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center"
        android:layout_gravity=""
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_30">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/powered_by"
            android:textColor="@color/BlackColor"
            android:textSize="@dimen/title_18"
            android:layout_marginRight="@dimen/margin_30"
            android:textAlignment="viewStart"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fiber_logo"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>


</LinearLayout>