<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="adjustPan"
    android:background="@drawable/background"
    tools:context=".ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:windowSoftInputMode="adjustPan"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        android:layout_centerInParent="true">


        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/change_pass_profile_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="10dp"
            android:layout_marginTop="@dimen/margin_20"
            android:src="@drawable/drower_logo"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/colorPrimaryDark"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_change_password"
            android:textSize="@dimen/title_20"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/margin_30"/>



        <!-- mobile number -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_layout_old_password"
            app:passwordToggleTint="@android:color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleContentDescription="Password"
            style="@style/TextLabel">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_old_password"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:inputType="textPassword"
                android:hint="@string/hint_old_password" />

        </android.support.design.widget.TextInputLayout>



        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_layout_new_password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/white"
            app:passwordToggleContentDescription="Password"
            style="@style/TextLabel">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_new_password"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:inputType="textPassword"
                android:hint="@string/hint_new_password"/>
        </android.support.design.widget.TextInputLayout>


        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_layout_confirm_password"
            style="@style/TextLabel">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_confirm_password"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:inputType="textPassword"
                android:hint="@string/hint_confirm_password"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/change_password_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/title_change_password"/>


        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_OTP"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:padding="12dp"
            android:text="@string/btn_retrive_otp"/>


    </LinearLayout>
</RelativeLayout>
