<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        android:layout_centerInParent="true">


        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/upload_profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="10dp"
            android:layout_marginTop="@dimen/margin_20"
            android:src="@drawable/camera_icon"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/colorPrimaryDark"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_title"
            android:textSize="@dimen/title_20"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/margin_30"/>


        <!-- Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_fullname"
            style="@style/TextLabel">

            <EditText android:id="@+id/input_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:hint="@string/full_name"
                android:layout_marginBottom="@dimen/margin_10" />
        </android.support.design.widget.TextInputLayout>


        <!-- mobile number -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_mobile_number"
            style="@style/TextLabel">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_mobile_number"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:inputType="phone"
                android:hint="@string/hint_phoneno" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_vehicle_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextLabel">
            <EditText
                android:id="@+id/input_vehicle_no"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPhonetic"
                android:hint="@string/reg_num" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_password"
            style="@style/TextLabel">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_password"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:inputType="textPassword"
                android:hint="@string/hint_pass"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/signup_final_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="Create Account"/>

        <Button android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_50"
            android:textColor="@color/whiteColor"
            android:textStyle="normal"
            android:text="Already a member? Login"
            android:gravity="center"
            android:textAllCaps="false"
            android:textSize="16dp"/>

    </LinearLayout>
    </ScrollView>
</RelativeLayout>
